# OperatingSystems

DiningPhilosophers/: CMakeLists.txt  Fork.cpp  Fork.h  Philosopher.cpp  Philosopher.h  main.cpp
DiningPhilosophersChandyMisra/: CMakeLists.txt  Fork.cpp  Fork.h  Philosopher.cpp  Philosopher.h  Printing.cpp  Printing.h  README.md  SyncingChannel.cpp  SyncingChannel.h  Table.cpp  Table.h  main.cpp
HouseMultithreading/: Adult.cpp  Adult.h  CMakeLists.txt  Child.cpp  Child.h  House.cpp  House.h  HouseSetup.cpp  HouseSetup.h  HouseStuff.cpp  HouseStuff.h  Person.cpp  Person.h  Printing.cpp  Printing.h  SyncingChannel.h  main.cpp
HouseMultithreading/Resources/: Chair.cpp  Chair.h  Console.cpp  Console.h  HouseStuff.cpp  HouseStuff.h  Shower.cpp  Shower.h  TV.cpp  TV.h
HouseMultithreading/Threads/: Adult.cpp  Adult.h  Child.cpp  Child.h  Person.cpp  Person.h
